@@ -639,6 +639,13 @@ function get_avatar($avatar)
     require_once CLASS_DIR . 'class_user_options.php';
     global $CURUSER, $site_config, $user_stuffs;
 
+
+    if (!isset($avatar['avatar']) && !empty($avatar['user'])) {
+        $user = $user_stuffs->getUserFromId($avatar['user']);
+        $avatar['avatar'] = $user['avatar'];
+        unset($user);
+    }
+
     $avatar['anonymous'] = !empty($avatar['anonymous']) ? $avatar['anonymous'] : 'no';
     $avatar['offensive_avatar'] = !empty($avatar['offensive_avatar']) ? $avatar['offensive_avatar'] : 'no';
 
